# obj23mf

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  CMakeSettings.json  LICENSE  README.md  README.md~  licenses.txt
build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  obj23mf.sln  obj23mf.vcxproj  obj23mf.vcxproj.filters
build_win/Debug/: run.bat
build_win/obj23mf.dir/Debug/: obj23mf.exe.recipe  obj23mf.ilk
build_win/obj23mf.dir/Debug/obj23mf.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_win/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_win/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_win/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build_win/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
src/: SimpleLogger.h  licensesAsStr.hpp  main.cpp  main.cpp.orig
